--- a/src/app/modules/authmodule/components/forgort/forgot.component.html
+++ b/src/app/modules/authmodule/components/forgort/forgot.component.html
@@ -3,7 +3,6 @@
         <div class="card my-auto shadow">
             <div class="card-body px-5">
                 <div class="text-center">
-                   
                 </div>
                 <div class="text-center">
                     <h2>Welcome</h2>
@@ -24,7 +23,7 @@
                 <small style="color: lightslategray;" class="text">
                   dont have account </small>
             <div class="card-footer text-right">
-                <small type="button" (click)="loginBtn()" >login</small>
+                <small type="button" (click)="signupBtn()" >SignUp</small>
             </div>
         </div>
     </div>
