--- a/src/app/modules/homeModule/components/view-reals/viewReals.component.html
+++ b/src/app/modules/homeModule/components/view-reals/viewReals.component.html
@@ -18,7 +18,7 @@
             <p class="description">description here</p>
             <div class="hashtags">#hashtag1 #hashtag2</div>
           </div>
-        <div *ngFor="let username of postLike2">
+        <div *ngFor="let username of postlikesCollection">
           <div *ngIf="username?.postId==reels?.postId
           ">{{username.email}}</div>
         </div>
